kube/applications/transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  annotations:
    ignore-check.kube-linter.io/latest-tag: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/drop-net-raw-capability: >-
      FIXME: fix this one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: haugene/transmission-openvpn
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: openvpn-runtime-config
              mountPath: /etc/openvpn/custom
            - name: data
              mountPath: /data/media
            - name: downloads
              mountPath: /data/downloads
            - name: config
              mountPath: /config/transmission-home/
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: openvpn-config-volume
          secret:
            secretName: transmission-vpn-openvpn-config
        - name: openvpn-runtime-config
          emptyDir: {}
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: data
          persistentVolumeClaim:
            claimName: media
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
