kube/applications/transmission/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  rules:
    - host: transmission.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
  tls:
    - hosts:
        - transmission.${DOMAIN}
